GDPR: Arc opt-in string change.

Mainly the string change.
Since we add more text in the ToS page, split the ToS in two phases.
First phase shows ToS webview and limited contents.
Second phase show all the content, make this page scrollable and scroll to
the bottom. ToS webview height should not change when the flow goes from
phase one to phase two.
Changes affect on both OOBE flow and in-session Arc opt-in.
For OOBE flow, show usage/diagnose status in ToS page if user is device
owner and has previously confirmed sending usage/diagnose data.
Call update ToS webview height when necessary in OOBE flow.

Bug: b/73452374
Bug: 826927
Test: Manual
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I33fe36403be86cb9b157417747740e786a6510a2
Reviewed-on: https://chromium-review.googlesource.com/984492
Commit-Queue: Long Cheng <lgcheng@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547096}
Former-commit-id: 84ea9200301cf886a55ff919c00dccb28842f6c0