chrome/browser/resources/chromeos/arc_support/background.js
@@ -279,10 +279,12 @@ class TermsOfServicePage {
    *     backup-restore preference.
    * @param {PreferenceCheckbox} locationServiceCheckbox The checkbox for the
    *     location service.
+   * @param {string} learnMorePaiService. Contents of learn more link of Play
+   *     auto install service.
    */
   constructor(
       container, isManaged, countryCode, metricsCheckbox, backupRestoreCheckbox,
-      locationServiceCheckbox) {
+      locationServiceCheckbox, learnMorePaiService) {
     this.loadingContainer_ =
         container.querySelector('#terms-of-service-loading');
     this.contentContainer_ =
@@ -337,14 +339,33 @@ class TermsOfServicePage {
     });
     this.state_ = LoadState.UNLOADED;
 
+    this.serviceContainer_ = container.querySelector('#service-container');
+    this.locationService_ =
+        container.querySelector('#location-service-preference');
+    this.paiService_ = container.querySelector('#pai-service-descirption');
+    this.googleServiceConfirmation_ =
+        container.querySelector('#google-service-confirmation');
+    this.agreeButton_ = container.querySelector('#button-agree');
+    this.nextButton_ = container.querySelector('#button-next');
+
     // On managed case, do not show TermsOfService section. Note that the
     // checkbox for the prefereces are still visible.
     var visibility = isManaged ? 'hidden' : 'visible';
     container.querySelector('#terms-container').style.visibility = visibility;
 
+    // PAI service.
+    var paiLabel = this.paiService_.querySelector('.content-text');
+    var paiLearnMoreLink = paiLabel.querySelector('#learn-more-link-pai');
+    if (paiLearnMoreLink) {
+      paiLearnMoreLink.onclick = function(event) {
+        event.stopPropagation();
+        showTextOverlay(learnMorePaiService);
+      };
+    }
+
     // Set event handler for buttons.
-    container.querySelector('#button-agree')
-        .addEventListener('click', () => this.onAgree());
+    this.agreeButton_.addEventListener('click', () => this.onAgree());
+    this.nextButton_.addEventListener('click', () => this.onNext_());
     container.querySelector('#button-cancel')
         .addEventListener('click', () => this.onCancel_());
   }
@@ -364,12 +385,30 @@ class TermsOfServicePage {
   showContent_() {
     this.loadingContainer_.hidden = true;
     this.contentContainer_.hidden = false;
+    this.locationService_.hidden = true;
+    this.paiService_.hidden = true;
+    this.googleServiceConfirmation_.hidden = true;
+    this.serviceContainer_.style.overflow = 'hidden';
+    this.agreeButton_.hidden = true;
+    this.nextButton_.hidden = false;
     this.updateTermsHeight_();
-    this.contentContainer_.querySelector('#button-agree').focus();
+    this.nextButton_.focus();
+  }
+
+  onNext_() {
+    this.locationService_.hidden = false;
+    this.paiService_.hidden = false;
+    this.googleServiceConfirmation_.hidden = false;
+    this.serviceContainer_.style.overflowY = 'auto';
+    this.serviceContainer_.scrollTop = this.serviceContainer_.scrollHeight;
+    this.agreeButton_.hidden = false;
+    this.nextButton_.hidden = true;
+    this.agreeButton_.focus();
   }
 
   /**
-   * Updates terms view height manually because webview is not automatically
+   * Updates terms view height manually because webview is not automati
+   * cally
    * resized in case parent div element gets resized.
    */
   updateTermsHeight_() {
@@ -681,7 +720,8 @@ function initialize(data, deviceId) {
       new PreferenceCheckbox(
           doc.getElementById('location-service-preference'),
           data.learnMoreLocationServices, '#learn-more-link-location-service',
-          data.controlledByPolicy));
+          data.controlledByPolicy),
+      data.learnMorePaiService);
 
   // Initialize the Active Directory SAML authentication page.
   activeDirectoryAuthPage =
