chrome/browser/resources/chromeos/login/arc_terms_of_service.js
@@ -45,6 +45,15 @@ Polymer({
   },
 
   /**
+   * On-tap event handler for Next button.
+   *
+   * @private
+   */
+  onNext_: function() {
+    this.screen.onNext();
+  },
+
+  /**
    * On-tap event handler for Retry button.
    *
    * @private
