chrome/browser/resources/chromeos/login/screen_arc_terms_of_service.js
@@ -135,6 +135,9 @@ login.createScreen('ArcTermsOfServiceScreen', 'arc-tos', function() {
       metrics.querySelector('#learn-more-link-metrics').onclick = function() {
         self.showLearnMoreOverlay(leanMoreStatisticsText);
       };
+      // For device owner set up, this may come after the page is loaded.
+      // Recaculate the ToS webview height.
+      this.updateTermViewHight_();
     },
 
     /**
@@ -248,6 +251,15 @@ login.createScreen('ArcTermsOfServiceScreen', 'arc-tos', function() {
       retryButton.addEventListener('click', this.reloadPlayStoreToS.bind(this));
       buttons.push(retryButton);
 
+      var nextButton = this.ownerDocument.createElement('button');
+      nextButton.id = 'arc-tos-next-button';
+      nextButton.disabled = this.classList.contains('arc-tos-loading');
+      nextButton.classList.add('preserve-disabled-state');
+      nextButton.textContent =
+          loadTimeData.getString('arcTermsOfServiceNextButton');
+      nextButton.addEventListener('click', this.onNext.bind(this));
+      buttons.push(nextButton);
+
       var acceptButton = this.ownerDocument.createElement('button');
       acceptButton.id = 'arc-tos-accept-button';
       acceptButton.disabled = this.classList.contains('arc-tos-loading');
@@ -258,6 +270,21 @@ login.createScreen('ArcTermsOfServiceScreen', 'arc-tos', function() {
       buttons.push(acceptButton);
 
       return buttons;
+    },
+
+    /**
+     * Handles Next button click.
+     */
+    onNext: function() {
+      this.getElement_('arc-location-service').hidden = false;
+      this.getElement_('arc-pai-service').hidden = false;
+      this.getElement_('arc-google-service-confirmation').hidden = false;
+      this.getElement_('arc-tos-container').style.overflowY = 'auto';
+      this.getElement_('arc-tos-container').scrollTop =
+          this.getElement_('arc-tos-container').scrollHeight;
+      this.getElement_('arc-tos-next-button').hidden = true;
+      this.getElement_('arc-tos-accept-button').hidden = false;
+      this.getElement_('arc-tos-accept-button').focus();
     },
 
     /**
@@ -408,8 +435,23 @@ login.createScreen('ArcTermsOfServiceScreen', 'arc-tos', function() {
       this.addClass_('arc-tos-loaded');
 
       this.enableButtons_(true);
-      this.getElement_('arc-tos-accept-button').focus();
+      this.getElement_('arc-location-service').hidden = true;
+      this.getElement_('arc-pai-service').hidden = true;
+      this.getElement_('arc-google-service-confirmation').hidden = true;
+      this.getElement_('arc-tos-container').style.overflow = 'hidden';
+      this.getElement_('arc-tos-accept-button').hidden = true;
+      this.getElement_('arc-tos-next-button').hidden = false;
+      this.getElement_('arc-tos-next-button').focus();
 
+      this.updateTermViewHight_();
+    },
+
+    /**
+     * Updates ToS webview height.
+     *
+     * @private
+     */
+    updateTermViewHight_() {
       var termsView = this.getElement_('arc-tos-view');
       var termsViewContainer = this.getElement_('arc-tos-view-container');
       var setTermsHeight = function() {
@@ -459,6 +501,10 @@ login.createScreen('ArcTermsOfServiceScreen', 'arc-tos', function() {
           'https://play.google.com/about/images/play_logo.png';
 
       this.hideOverlay();
+      // ToS content may be loaded before the page is shown. In that case,
+      // height of ToS webview is not correctly caculated. Recaculate the
+      // height here.
+      this.updateTermViewHight_();
     },
 
     /**
@@ -497,24 +543,33 @@ login.createScreen('ArcTermsOfServiceScreen', 'arc-tos', function() {
     setLearnMoreHandlers_: function() {
       var self = this;
 
-      var leanMoreBackupAndRestoreText =
+      var learnMoreBackupAndRestoreText =
           loadTimeData.getString('arcLearnMoreBackupAndRestore');
       var backupAndRestore = this.getElement_('arc-enable-backup-restore');
       backupAndRestore.parentElement
           .querySelector('#learn-more-link-backup-restore')
           .onclick = function(event) {
         event.stopPropagation();
-        self.showLearnMoreOverlay(leanMoreBackupAndRestoreText);
+        self.showLearnMoreOverlay(learnMoreBackupAndRestoreText);
       };
 
-      var leanMoreLocationServiceText =
+      var learnMoreLocationServiceText =
           loadTimeData.getString('arcLearnMoreLocationService');
       var locationService = this.getElement_('arc-enable-location-service');
       locationService.parentElement
           .querySelector('#learn-more-link-location-service')
           .onclick = function(event) {
         event.stopPropagation();
-        self.showLearnMoreOverlay(leanMoreLocationServiceText);
+        self.showLearnMoreOverlay(learnMoreLocationServiceText);
+      };
+
+      var learnMorePaiServiceText =
+          loadTimeData.getString('arcLearnMorePaiService');
+      var paiService = this.getElement_('arc-pai-service');
+      paiService.querySelector('#learn-more-link-pai').onclick = function(
+          event) {
+        event.stopPropagation();
+        self.showLearnMoreOverlay(learnMorePaiServiceText);
       };
     }
   };
